[package]
name = "advent_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[dependencies]
aoc-main = { version = "0.5.0", features = ["bench"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.2"

[dev-dependencies]
insta = "1.34.0"
